Initial commit (refs #3502)
Convert code of the initial app to the new app

--- a/Apps/DCP_APP_SWITCHER/DCP_APP_SWITCHER_init.php.in
+++ b/Apps/DCP_APP_SWITCHER/DCP_APP_SWITCHER_init.php.in
@@ -3,8 +3,18 @@
 global $app_const;
 
 $app_const = array(
-    "INIT"    => "yes",
-    "VERSION" => "@VERSION@-@RELEASE@"
+    "INIT" => "yes",
+    "VERSION" => "@VERSION@-@RELEASE@",
+    "DEFAULT_APPLICATION_NAME" => array(
+        "val" => "",
+        "descr" => N_("DCP_APP_SWITCHER:default application displayed"),
+        "user" => "Y",
+        "kind" => "text"
+    ),
+    "SHORTCUT_APPLICATION" => array(
+        "val" => "{}",
+        "descr" => N_("DCP_APP_SWITCHER:application present in application bar"),
+        "user" => "Y",
+        "kind" => "static"
+    )
 );
-
-?>
