Rename DCP_APP_SWITCHER to APP_SWITCHER (refs #3502)

--- a/Apps/APP_SWITCHER/APP_SWITCHER_init.php.in
+++ b/Apps/APP_SWITCHER/APP_SWITCHER_init.php.in
@@ -7,13 +7,13 @@ $app_const = array(
     "VERSION" => "@VERSION@-@RELEASE@",
     "DEFAULT_APPLICATION_NAME" => array(
         "val" => "",
-        "descr" => N_("DCP_APP_SWITCHER:default application displayed"),
+        "descr" => N_("APP_SWITCHER:default application displayed"),
         "user" => "Y",
         "kind" => "text"
     ),
     "SHORTCUT_APPLICATION" => array(
         "val" => "{}",
-        "descr" => N_("DCP_APP_SWITCHER:application present in application bar"),
+        "descr" => N_("APP_SWITCHER:application present in application bar"),
         "user" => "Y",
         "kind" => "static"
     )
