Change makefile to use localBuildRule (refs #3502)

--- a/Actions/APP_SWITCHER/Makefile
+++ b/Actions/APP_SWITCHER/Makefile
@@ -1,8 +1,10 @@
 export targetdir
 export utildir
+export localBuildRule
 
 SUBDIR = $(filter-out Makefile, $(wildcard */))
 
 include $(utildir)/PubRule
+include $(localBuildRule)/localBuildRule
 
 DISTFILES = $(SUBDIR) Makefile
