--- a/Apps/APP_SWITCHER/Makefile
+++ b/Apps/APP_SWITCHER/Makefile
@@ -4,3 +4,4 @@ appname = $(shell basename `pwd` | tr [a-z] [A-Z])
 export appname
 
 include $(utildir)/PubRule
+include $(localBuildRule)/localBuildRule
