Add licence (closes #3556)

--- a/configure.in
+++ b/configure.in
@@ -6,7 +6,6 @@
 #   as published by the Free Software Foundation; either version
 #   2 of the License, or (at your option) any later version.
 #
-AC_REVISION($Id: configure.in,v 1.1 2010-01-13 10:47:16 eric Exp $)
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -21,6 +20,10 @@ PACKAGE=dynacase-app-switcher
 AC_SUBST(APPNAME)
 APPNAME=APP_SWITCHER
 ac_default_prefix=/var/www/dynacase/dynacase
+
+LICENSE="http://www.fsf.org/licensing/licenses/agpl-3.0.html GNU Affero General Public License"
+AC_SUBST(LICENSE)
+
 AC_SUBST(PUBRULE)
 PUBRULE="$(pwd)/buildTools"
 AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)
